<resources>
    <string name="app_name">NewsApp</string>

    <!-- used in News Fragment-->
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="text">Text</string>

    <!-- used in navigation drawer-->
    <string name="bbc_news">BBC news</string>
    <string name="cnn_news">CNN news</string>
    <string name="fox_news">FOX news</string>
    <string name="categories">Categories</string>
    <string name="business_category">Business</string>
    <string name="entertainment_category">Entertainment</string>
    <string name="health_category">Health</string>
    <string name="politics_category">Politics</string>
    <string name="sports_category">Sports</string>
    <string name="technology_category">Technology</string>
    <string name="liked_news">Liked News</string>

    <string name="api_key">b0afdde9-70a3-4e6f-a138-61bf27e4c62f</string>

    <string name="action_settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

</resources>
