<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_marginBottom="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView

        android:id="@+id/news_image"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1.5"
        android:src="@mipmap/ic_launcher_round"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:background="#d6fefc"
            android:id="@+id/news_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/title"/>

        <TextView
            android:background="#30f970"
            android:id="@+id/news_author"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/author"/>

        <TextView
            android:textSize="10sp"
            android:background="#faffb5"
            android:id="@+id/news_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/like_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_favorite_border"
                android:onClick="like"/>

            <ImageButton
                android:id="@+id/share_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:actionProviderClass="android.widget.ShareActionProvider"
                android:src="@drawable/ic_menu_share" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>